@@ -16,9 +16,9 @@
 
 
 AC_PREREQ(2.57)
-AC_INIT(wzdftpd, 0.1rc4, chifflier@cpe.fr)
+AC_INIT(wzdftpd, 0.1, chifflier@cpe.fr)
 AC_CONFIG_SRCDIR([backends/plaintext/libplaintext_main.c])
-AM_INIT_AUTOMAKE(wzdftpd,0.1rc4,no-define)
+AM_INIT_AUTOMAKE(wzdftpd,0.1,no-define)
 AM_CONFIG_HEADER([config.h])
 
 AM_MAINTAINER_MODE
@@ -80,7 +80,8 @@ AC_CHECK_FUNCS([inet_ntop])
 
 AC_CHECK_LIB(dl, dlopen,DL_FLAGS="-ldl",)
 AC_CHECK_LIB(crypt, crypt,CRYPT_FLAGS="-lcrypt",)
-AC_CHECK_LIB(pthread, pthread_create,,exit 1)
+AC_CHECK_LIB(pthread, pthread_create,PTHREAD_FLAGS="-lpthread")
+AC_PTHREAD_FREEBSD
 
 # Build options string
 WZD_BUILD_OPTS="threads"
@@ -110,7 +111,7 @@ AC_ARG_ENABLE(ssl, [  --enable-ssl            enable ssl support],
     if eval "test x$enable_ssl = xyes"; then
       AC_MSG_RESULT(yes)
       [AC_CHECK_HEADERS([openssl/ssl.h],,AC_MSG_ERROR(missing openssl headers))]
-      [AC_CHECK_LIB(ssl, SSL_library_init,,AC_MSG_ERROR(missing openssl libraries))]
+      [AC_CHECK_LIB(ssl, SSL_library_init,,AC_MSG_ERROR(missing openssl libraries),"-lcrypto")]
       SSL_CPPFLAGS="-DSSL_SUPPORT"
       SSL_LDFLAGS="-lssl -lcrypto"
       WZD_BUILD_OPTS="${WZD_BUILD_OPTS}${COMMA}ssl"
@@ -162,6 +163,7 @@ BUILDNUM="`date +\"%Y%m%d\"`"
 AC_SUBST(BUILDNUM)
 AC_SUBST(CRYPT_FLAGS)
 AC_SUBST(DL_FLAGS)
+AC_SUBST(PTHREAD_FLAGS)
 AC_SUBST(SSL_CPPFLAGS)
 AC_SUBST(SSL_LDFLAGS)
 AC_SUBST(VERSION)
