@@ -5,4 +5,6 @@ bin_PROGRAMS = siteuptime
 
 siteuptime_SOURCES = siteuptime.c
 
+siteuptime_LDFLAGS = @SSL_LDFLAGS@
+
 AM_CPPFLAGS = -DSSL_SUPPORT=1
