@@ -5,4 +5,6 @@ bin_PROGRAMS = sitewho
 
 sitewho_SOURCES = sitewho.c
 
+sitewho_LDFLAGS = @SSL_LDFLAGS@
+
 AM_CPPFLAGS = -DSSL_SUPPORT=1
